# what-is-your-opinion-frontend

./: cucumber.js  package-lock.json  package.json  tsconfig.json
features/: voteResultSearchPage.feature
features/step-definitions/: given.ts  index.ts  then.ts  when.ts
features/utils/: babel.ts  loaders.ts
features/worlds/: app-world.tsx  index.ts
public/: index.html  manifest.json
src/: cucumber.d.ts
src/App/: index.tsx  style.css
src/AppRouter/: index.tsx
src/Containers/EntitySearchPage/: index.tsx
src/Containers/VotingPage/: index.tsx
src/Entities/: EntityProvider.ts
src/Models/: Entity.ts  Entity.tsx  Question.ts  Result.ts  Statistics.ts  Vote.ts  VoteOption.ts  VoteResult.ts
src/Routes/: PlatformRouter.tsx  ResultDisplayRoute.tsx  ResultSearchRoute.tsx  index.ts
src/Services/: ServicesUtils.ts
src/Services/palisade-wasm/: .clang-format  .gitlab-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  contribute.md  index.js  index.ts  jsdoc.json  package-lock.json  package.json  tsconfig.json  typedoc.json
src/Services/palisade-wasm/lib/: palisade_binfhe.js  palisade_binfhe.wasm  palisade_pke.js  palisade_pke_es6.js
src/Services/palisade-wasm/unittest/: UnitTestCompress.mjs  UnitTestEvalFastRotation.mjs  UnitTestEvalInnerProduct.mjs  UnitTestEvalLinearWSum.mjs  UnitTestEvalMerge.mjs  UnitTestEvalMultMany.mjs  UnitTestEvalNegate.mjs  common.mjs
src/Translations/: TranslationProvider.ts  TranslationUtils.ts  translated-messages-ar.json  translated-messages-en.json
src/Utils/: ButtonUtils.ts  RouterUtils.ts  UrlUtils.ts
(+55 files in other folders)
